# milvm_stt

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  build.py  config.py  main.py  paths.py  pyproject.toml  tray.py
.github/workflows/: ci.yml  release.yml
dev/: status.md
services/: storage.py  transcriber.py
templates/: index.html
tests/: test_api.py  test_config.py  test_transcriber.py
