[project]
name = "voice-transcriber"
version = "0.3.0"
description = "Voice memo transcriber via OpenRouter + Gemini"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pywebview>=4.4",
    "pystray>=0.19",
    "pillow>=10.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]
