[project]
name = "voice-transcriber"
version = "0.3.0"
description = "Voice memo transcriber via OpenRouter + Gemini"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pywebview>=4.4",
    "pystray>=0.19",
    "pillow>=10.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "build.py", "tray.py", ".venv/*"]
